--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -6,7 +6,7 @@
     /*display: flex;
     flex-direction: row;
     flex: 1 1 auto;*/
-    margin: 1rem 5% 1rem 30%;
+    text-align: center;
 }
 
 .HeaderBox_WithNote {
@@ -45,12 +45,9 @@
 }
 
 .Header_HeadingText {
-    color: white;
-    text-align: left;
     margin: 2px 2px 2px 2px;
     font-size: 2rem;
     margin: 0 0 0.75rem 0;
-    color: white;
 }
 
 .Header_Section_BackButton {
