--- a/src/SidebarDetail/sidebarDetail.css
+++ b/src/SidebarDetail/sidebarDetail.css
@@ -4,17 +4,10 @@
 }
 
 .FolderName {
-    background-color: #8B7B8B;
-    color: white;
-    float: left;
-    width: 5%;
-    align-content: space-around;
-    padding: 1rem 0rem 0rem 0rem;
-    margin: 2px;
+    padding-top: 1rem;
     writing-mode: vertical-rl;
     text-orientation: upright;
     text-align: center;
-    flex-wrap: nowrap;
     font-size: 2.5rem;
 }
 
