--- a/src/AddFolder/addFolder.css
+++ b/src/AddFolder/addFolder.css
@@ -1,12 +1,32 @@
-/* These settings are for mobile devices greater than 320 width */
 .AddFolder {
-    /*border: 1px solid black;*/
-    /*margin: 20px;*/
-    /*margin: 0rem 5rem 0rem 0rem;*/
+    margin: 0% 30% 25% 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .NameInput {
     
+}
+
+.InputFields {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+label {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+label input,
+label textarea,
+label select {
+    width: 200px;
+    margin-left: 10px;
 }
 
 .AddFolder_Label {
@@ -21,33 +41,15 @@
 }
 
 .AddFolder_HeaderBox {
-    /*border: 1px solid black;*/
-    background-color: #8B7B8B;
-    color: white;
     margin: 0rem;
-    /*display: flex;
-    flex-direction: row;
-    flex: 1 1 auto;*/
 }
 
-/*.HeaderBox_WithNote {
-    background-color: #8B7B8B;
-    color: white;
-    width: 100%;
-    margin: 2rem 0 1rem 0;
-    display: flex;
-    flex-direction: row;
-}*/
-
 .AddFolder_Header_Sidebar {
-    /*flex: 1 1 auto;*/
     width: 18%;
     padding: 0px 0px;
 }
 
 .Header_Main {
-    /*margin: 0px 0px 0px 100px;
-    margin: 0px 20px;*/
 }
 
 .Header_Link {
@@ -61,16 +63,15 @@
 }
 
 .AddFolder_Title {
-    font-size: 2rem;
-    margin: 0 0 0.75rem 0;
-    color: white;
+    margin: 0 0 0.75rem;
+    line-height: 100%;
+    font-size: 1.5rem;
+    padding: 1rem;
 }
 
 .AddFolder_Section_BackButton {
     background-color: #8B7B8B;
     color: black;
-    /*padding: 1rem 1rem 0rem 2rem; 
-    margin: 0px 10px 0px 30px;*/
     height: 15vh;
     padding: 2rem 0rem 0rem 2rem; 
     margin: 4rem 0rem 0rem 0rem;
@@ -95,11 +96,8 @@
     color: white;
 }
 
-
-/* These settings are for the smallest screens */
 @media only screen and (max-width: 320px) {
     .AddFolder_Section_BackButton {
-        /*border: 1px solid black;*/
         height: 15vh;
         padding: 0rem 0rem 0rem 0rem; 
         margin: 4rem 0rem 0rem 0rem;
@@ -161,25 +159,3 @@
         font-size: 14px;
     }
 }
-
-
-
-/* These settings are for larger screens */
-/*@media only screen and (min-width: 750px) {
-    body { 
-        font-size: .8rem;
-        line-height: 80%;
-    }
-    .AddFolder_SubmitButton {
-        font-size: .8rem;
-        line-height: 80%;
-    }
-    .AddFolder_Label {
-        font-size: .8rem;
-        line-height: 80%;
-    }
-    .AddFolder {
-        font-size: .8rem;
-        line-height: 80%;
-    }
-}*/
