--- a/src/AddFolder/addFolder.css
+++ b/src/AddFolder/addFolder.css
@@ -1,5 +1,5 @@
 .AddFolder {
-    margin: 0% 30% 25% 0%;
+    margin: auto 20% auto 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
