--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,3 @@
-body {
-}
-
 .App {
     margin: 3vw;
 }
@@ -21,18 +18,18 @@ body {
 }
 
 .Section_Sidebar {
+    margin-right: 1rem;
 }
 
 .Section_Main {
     font-size: 1rem;
     flex-grow: 1;
-    margin-left: 1rem;
 }
 
 body { 
     background-color: #8B7B8B;
     color: white;
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
     font-size: 1.25rem;
     line-height: 150%;
     text-align: center;
